# muu

./: .gitignore  Cargo.toml  README.md  REQUIREMENTS.md  flake.nix
.github/workflows/: release.yml
docs/: demo.toml
docs/tapes/: config.tape  hero.tape
src/: cli.rs  completions.rs  config.rs  error.rs  main.rs  runner.rs  task.rs
src/commands/: init.rs  list.rs  mod.rs  run.rs  select.rs  shell_init.rs
tests/: cli_config.rs  cli_init.rs  cli_list.rs  cli_run.rs  cli_select.rs  cli_shell_init.rs
