[package]
name = "runz"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
dirs = "6"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"
