[package]
name = "runz"
version = "0.1.2"
edition = "2024"
publish = false
license = "MIT"
description = "A minimal, fast task runner"
repository = "https://github.com/mfyuu/runz"
homepage = "https://github.com/mfyuu/runz"
authors = ["mfyuu"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
dirs = "6"
inquire = "0.7"
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (MUST match local version)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Target platforms to build for
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Installers to generate
installers = ["shell", "powershell", "homebrew"]
# Homebrew tap repository
tap = "mfyuu/homebrew-tap"
# Publish jobs to run
publish-jobs = ["homebrew"]
# Enable GitHub attestations
github-attestations = true
# What to do on PRs
pr-run-mode = "plan"

# Force distribution despite publish = false
[package.metadata.dist]
dist = true
