[package]
name = "muu"
version = "0.4.0"
edition = "2024"
publish = false
license = "MIT"
description = "A minimal, fast task runner"
repository = "https://github.com/mfyuu/muu"
homepage = "https://github.com/mfyuu/muu"
authors = ["mfyuu"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
toml = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
dirs = "6"
inquire = { git = "https://github.com/mfyuu/inquire", branch = "muu" }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
pretty_assertions = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (MUST match local version)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Target platforms to build for
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Installers to generate
installers = ["shell", "powershell", "homebrew"]
# Homebrew tap repository
tap = "mfyuu/homebrew-tap"
# Publish jobs to run
publish-jobs = ["homebrew"]
# Enable GitHub attestations
github-attestations = true
# What to do on PRs
pr-run-mode = "plan"

# Force distribution despite publish = false
[package.metadata.dist]
dist = true
